# computer-graphics-project

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  conanfile.txt  vcpkg_packages.txt
include/: Ball.h  Ball.hpp  CMakeLists.txt  Court.h  Court.hpp
include/app/: CMakeLists.txt  Node.hpp  cleanup.hpp  constants.hpp  init.hpp  loop.hpp  state.hpp
include/app/objects/: Ball.hpp  CMakeLists.txt  Camera.hpp  Floor.hpp  Lamp.hpp
include/rg/: CMakeLists.txt
include/rg/model/: Ball.hpp  CMakeLists.txt  Court.hpp
include/rg/renderer/: CMakeLists.txt  Renderer.hpp  Scene.hpp  render.hpp
include/rg/renderer/buffer/: CMakeLists.txt  FrameBuffer.hpp  IndexBuffer.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexLayout.hpp
include/rg/renderer/camera/: CMakeLists.txt  Camera.hpp  Surface.hpp  View.hpp
include/rg/renderer/light/: CMakeLists.txt  DirectionalLight.hpp  Light.hpp  PointLight.hpp  SpotLight.hpp  lights.hpp
include/rg/renderer/model/: CMakeLists.txt  Cubemap.hpp  Mesh.hpp  Model.hpp  Skybox.hpp  Texture.hpp  Transform.hpp  Vertex.hpp
include/rg/renderer/shader/: CMakeLists.txt  Shader.hpp  ShaderData.hpp
include/rg/util/: CMakeLists.txt  common_meshes.hpp  layout_elements.hpp  layouts.hpp  read_file.hpp
res/objects/ball/: ball.mtl  basketball.mtl  source
res/objects/court-tile/: tile.mtl
res/objects/cube/: cube.mtl
res/objects/lamp/: base.mtl  head.mtl  light.mtl
res/objects/spotlight/: spotlight.blend  spotlight.mtl
res/shaders/: debug.fs.glsl  debug.vs.glsl  example.fs.glsl  example.vs.glsl  light.fs.glsl  light.vs.glsl  shader.fs.glsl  shader.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  surface.fs.glsl  surface.vs.glsl
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  Node.cpp  callbacks.cpp  cleanup.cpp  constants.cpp  graphics.cpp  init.cpp  loop.cpp  scene.cpp  state.cpp
src/app/objects/: CMakeLists.txt  Camera.cpp  Lamp.cpp
src/model/: Ball.cpp  CMakeLists.txt  Court.cpp
src/renderer/: CMakeLists.txt  Renderer.cpp  Scene.cpp  render.cpp
src/renderer/buffer/: CMakeLists.txt  FrameBuffer.cpp  IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexLayout.cpp
src/renderer/camera/: CMakeLists.txt  Camera.cpp  Surface.cpp  View.cpp
src/renderer/light/: DirectionalLight.cpp  Light.cpp  PointLight.cpp  SpotLight.cpp
src/renderer/model/: CMakeLists.txt  Cubemap.cpp  Mesh.cpp  Model.cpp  Skybox.cpp  Texture.cpp  Transform.cpp  Vertex.cpp
src/renderer/shader/: CMakeLists.txt  Shader.cpp  ShaderData.cpp  Shader_set.cpp
src/util/: CMakeLists.txt  common_meshes.cpp  layout_elements.cpp  layouts.cpp  read_file.cpp
