cmake_minimum_required(VERSION 3.17)
project(rg
        LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(RESOURCE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/res)

add_subdirectory(external)
add_subdirectory(src)

